--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<button type="button" onclick="isURL()">Convert</button> 
 			<button type="reset">Clear</button>
 			<input type="text" id="outputArea" placeholder="Nov-Feb: Mo-Fr 08:30-14:00; Mar 13-Oct 30: Mo-Fr 07:30-15:00">
-			<button type="button" onclick="window.open('http://projets.pavie.info/yohours/?oh=' + document.getElementById('outputArea').value )">Check with YoHours</button>
+			<button type="button" onclick="window.open('https://projets.pavie.info/yohours/?oh=' + document.getElementById('outputArea').value )">Check with YoHours</button>
 			<button type="button" onclick="window.open('https://openingh.openstreetmap.de/evaluation_tool/?EXP=' + document.getElementById('outputArea').value )">Check with opening_hours evaluation tool</button>
 		</form>
 	</body>
