--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h1>Web to OSM Opening Hours - OSM_de Telegram edition</h1>
 		<p>Info: URL Parsing only working partialy</p>
 		<p>Paste free text or an URL where the opening hours can be found (will work if the website uses the <a href="https://schema.org/OpeningHoursSpecification" target="_blank">OpeningHours specification</a> of Schema.org)</p>
-		<p>This site is based on a Geometa Lab HSR project (<a href="https://gitlab.com/geometalab/web-to-osm-opening-hours/blob/master/README.md"   target="_blank">repo</a>).</p>
+		<p>This site is hostet by GitHub Pages from <a href="https://github.com/OSM-de/WebToOSMOH" target="_blank">@OSM_de's repository</a>.</p>
 		<form>
 			<textarea rows="9" cols="50" id="inputArea" onblur="isURL()" placeholder="November bis Februar Montag - Freitag: 8.30 - 14.00 Uhr 
 		13.03. bis 30.10.2019  Montag bis Freitag 7.30 - 15.00 Uhr"></textarea>
@@ -21,5 +21,6 @@
 			<button type="button" onclick="window.open('https://projets.pavie.info/yohours/?oh=' + document.getElementById('outputArea').value )">Check with YoHours</button>
 			<button type="button" onclick="window.open('https://openingh.openstreetmap.de/evaluation_tool/?EXP=' + document.getElementById('outputArea').value )">Check with opening_hours evaluation tool</button>
 		</form>
+		<p><small>This site is based on a Geometa Lab HSR project (<a href="https://gitlab.com/geometalab/web-to-osm-opening-hours/blob/master/README.md" target="_blank">repo</a>). Thanks for providing this!</small></p>
 	</body>
 </html>
