--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Web to OSM Opening Hours - OSM_de Telegram edition</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="styles/styles.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-		<script src="main.js"></script>
+		<script src="scripts/handleURL.js"></script>
+		<script src="scripts/handleHTML.js"></script>
+		<script src="scripts/main.js"></script>
 	</head>
 	<body>
 		<h1>Web to OSM Opening Hours - OSM_de Telegram edition</h1>
@@ -13,10 +15,26 @@
 		<p>Paste free text or an URL where the opening hours can be found (will work if the website uses the <a href="https://schema.org/OpeningHoursSpecification" target="_blank">OpeningHours specification</a> of Schema.org)</p>
 		<p>This site is hostet by GitHub Pages from <a href="https://github.com/OSM-de/WebToOSMOH" target="_blank">@OSM_de's repository</a>.</p>
 		<form>
-			<textarea rows="9" cols="50" id="inputArea" onblur="isURL()" placeholder="November bis Februar Montag - Freitag: 8.30 - 14.00 Uhr 
-		13.03. bis 30.10.2019  Montag bis Freitag 7.30 - 15.00 Uhr"></textarea>
-			<button type="button" onclick="isURL()">Convert</button> 
-			<button type="reset">Clear</button>
+			<table>
+				<tr>
+					<td>
+						<big><b>Copy & Paste-area for website content (will be processed into text):</b></big><br/>
+						<div id="htmlArea" contenteditable class='textarea'>Paste a table here!!</div>
+					</td>
+					<td><button type="button" onclick="handleHTMLinput();">Process</button></td>
+				</tr>
+			</table>
+			<table>
+				<tr>
+					<td>
+						<big><b>Text input:</b></big><br/>
+						<textarea rows="9" id="inputArea" onblur="isURL()" placeholder="November bis Februar Montag - Freitag: 8.30 - 14.00 Uhr 
+13.03. bis 30.10.2019  Montag bis Freitag 7.30 - 15.00 Uhr"></textarea>
+					</td>
+					<td><button type="button" onclick="isURL()">Convert</button><br/>
+						<button type="reset">Clear</button></td>
+				</tr>
+			</table>
 			<input type="text" id="outputArea" placeholder="Nov-Feb: Mo-Fr 08:30-14:00; Mar 13-Oct 30: Mo-Fr 07:30-15:00">
 			<button type="button" onclick="window.open('https://projets.pavie.info/yohours/?oh=' + document.getElementById('outputArea').value )">Check with YoHours</button>
 			<button type="button" onclick="window.open('https://openingh.openstreetmap.de/evaluation_tool/?EXP=' + document.getElementById('outputArea').value )">Check with opening_hours evaluation tool</button>
