--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h1>Web to OSM Opening Hours - OSM_de Telegram edition</h1>
 		<p>Info: URL Parsing only working partialy</p>
 		<p>Paste free text or an URL where the opening hours can be found (will work if the website uses the <a href="https://schema.org/OpeningHoursSpecification" target="_blank">OpeningHours specification</a> of Schema.org)</p>
-		<p>This site is hostet by GitHub Pages from <a href="https://github.com/OSM-de/WebToOSMOH" target="_blank">@OSM_de's repository</a>.</p>
+		<p>This site is hosted by GitHub Pages from <a href="https://github.com/OSM-de/WebToOSMOH" target="_blank">@OSM_de's repository</a>.</p>
 		<form>
 			<table>
 				<tr>
