--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<title>Web to OSM Opening Hours - OSM_de Telegram edition</title>
 		<link rel="stylesheet" href="styles/styles.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+		<script src="https://momentjs.com/downloads/moment.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 		<script src="scripts/handleURL.js"></script>
 		<script src="scripts/handleHTML.js"></script>
 		<script src="scripts/main.js"></script>
