fix typos, add link to OSM_de

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<script src="scripts/main.js"></script>
 	</head>
 	<body>
-		<h1>Web to OSM Opening Hours - OSM_de Telegram edition</h1>
-		<p>Info: URL Parsing only working partialy</p>
+		<h1>Web to OSM Opening Hours — <a href="https://t.me/OSM_de">OSM_de Telegram</a> edition</h1>
+		<p>Info: URL Parsing only working partially</p>
 		<p>Paste free text or an URL where the opening hours can be found (will work if the website uses the <a href="https://schema.org/OpeningHoursSpecification" target="_blank">OpeningHours specification</a> of Schema.org)</p>
 		<p>This site is hosted by GitHub Pages from <a href="https://github.com/OSM-de/WebToOSMOH" target="_blank">@OSM_de's repository</a>.</p>
 		<form>
