Placeholder for contenteditable

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<tr>
 					<td class="top">
 						<big><b>Copy &amp; Paste-area for website content (will be processed into text):</b></big><br/>
-						<div id="htmlArea" contenteditable class='textarea'>Paste a table here!!</div>
+						<div id="htmlArea" contenteditable class="textarea" placeholder="Paste a table here!!"></div>
 					</td>
 					<td class="lefttop">
 						<button type="button" onclick="handleHTMLinput();">Process</button>
@@ -29,7 +29,7 @@
 				<tr>
 					<td class="top">
 						<big><b>Text input:</b></big><br/>
-						<textarea rows="9" id="inputArea" onblur="isURL()" placeholder="November bis Februar Montag - Freitag: 8.30 - 14.00 Uhr 
+						<textarea rows="9" id="inputArea" onblur="isURL()" placeholder="November bis Februar Montag - Freitag: 8.30 - 14.00 Uhr
 13.03. bis 30.10.2019  Montag bis Freitag 7.30 - 15.00 Uhr"></textarea>
 					</td>
 					<td class="lefttop">
