Using jsDeliver for scripts

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<link rel="stylesheet" href="styles/styles.css">
 		<script src="https://momentjs.com/downloads/moment.min.js"></script>
 		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-		<script src="scripts/handleURL.js"></script>
-		<script src="scripts/handleHTML.js"></script>
-		<script src="scripts/main.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/OSM-de/WebToOSMOH@master/scripts/handleURL.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/OSM-de/WebToOSMOH@master/scripts/handleHTML.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/OSM-de/WebToOSMOH@master/scripts/main.js"></script>
 	</head>
 	<body>
 		<h1>Web to OSM Opening Hours — <a href="https://t.me/OSM_de">OSM_de Telegram</a> edition</h1>
