--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				, index = 0; index < includeFiles.length; ++index
 			)
 			{
-				$.getScript(includeFiles[index].replace("./", "https://cdn.jsdelivr.net/gh/OSM-de/WebToOSMOH@master/scripts/"));
+				$.getScript(includeFiles[index].replace("./", "https://cdn.jsdelivr.net/gh/OSM-de/WebToOSMOH@master/"));
 			}
 		</script>
 	</head>
