--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
 					</td>
 				</tr>
 			</table>
-			<img src="https://img.shields.io/badge/dynamic/json?color=%233866af&label=no.%20of%20conversions&query=%24.value&url=https%3A%2F%2Fapi.countapi.xyz%2Fget%2Fosm-de-telegram%2Fwebtoosmoh-usage&style=for-the-badge" id="usages"/><br/>
+			<img src="https://img.shields.io/badge/dynamic/json?color=%233866af&label=no.%20of%20conversions&query=%24.value&url=https%3A%2F%2Fapi.countapi.xyz%2Fget%2Fosm-de-telegram%2Fwebtoosmoh-usage&style=for-the-badge" id="usages"/>
+			<img src="https://img.shields.io/jsdelivr/gh/hm/OSM-de/WebToOSMOH?style=for-the-badge" id="jsDelivr"/><br/>
 			<button type="button" onclick="window.open('https://projets.pavie.info/yohours/?oh=' + document.getElementById('outputArea').value )">Check with YoHours</button>
 			<button type="button" onclick="window.open('https://openingh.openstreetmap.de/evaluation_tool/?EXP=' + document.getElementById('outputArea').value )">Check with opening_hours evaluation tool</button>
 		</form>
