--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				, index = 0; index < includeFiles.length; ++index
 			)
 			{
-				$.getScript(includeFiles[index].replace("./", "https://cdn.jsdelivr.net/gh/OSM-de/WebToOSMOH@master/"));
+				$.getScript(includeFiles[index].replace("./", "https://cdn.jsdelivr.net/gh/OSM-de/WebToOSMOH@1.1/"));
 			}
 		</script>
 	</head>
